--- a/Python.ipynb
+++ b/Python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMNO924N+YuTl7uid83UUYp",
+      "authorship_tag": "ABX9TyMkcQXJoj/M5mRaDlnDqw0Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "teste = \"arquivo criado em python\"\n",
+        "\n",
+        "print(teste,\", aula em python\")"
+      ],
       "metadata": {
-        "id": "9OSrBWd_e3HM"
+        "id": "IQ3Cx0XjkmvU"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "id": "9OSrBWd_e3HM",
+        "outputId": "16bdd4bc-e3e4-4d5a-8d04-3282674c7bf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "teste do primeiro arquivo em python\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"teste do primeiro arquivo em python\")"
+      ]
     }
   ]
 }
